# PiNscattering

PiN/: CMakeLists.txt  Makefile  main.cpp
PiN/include/: Amplitudes.h  Argand.h  CrossSection.h  Dat.h  Legendre.h  Momentum.h
PiN/src/: Amplitudes.cpp  Argand.cpp  CrossSection.cpp  Dat.cpp  Legendre.cpp  Momentum.cpp
